Заменил get(0) на getFirst()