@@ -105,7 +105,7 @@ public class ParallelRenderer implements Renderer {
             }
             offset += affine.probability();
         }
-        return affineTransformations.get(0);
+        return affineTransformations.getFirst();
     }
 
     private Transformation getRandomVariation(List<Transformation> variations) {
